--- a/serverless.yml
+++ b/serverless.yml
@@ -100,7 +100,7 @@ resources:
     restaurantsTable:
       Type: AWS::DynamoDB::Table
       Properties:
-        TableName: restaurants-${self:provider.stage}-yancui
+        TableName: restaurants-${self:provider.stage}-workshop-razvan
         AttributeDefinitions:
           - AttributeName: name
             AttributeType: S
@@ -114,20 +114,20 @@ resources:
     orderEventsStream:
       Type: AWS::Kinesis::Stream
       Properties: 
-        Name: orders-${self:provider.stage}-yancui
-        # Name: ${ssm:/workshop-yancui/dev/stream_name}
+        Name: orders-${self:provider.stage}-workshop-razvan
+        # Name: ${ssm:/workshop-razvan/dev/stream_name}
         ShardCount: 1
 
     restaurantNotificationTopic:
       Type: AWS::SNS::Topic
       Properties: 
-        DisplayName: restaurants-${self:provider.stage}-yancui
-        TopicName: restaurants-${self:provider.stage}-yancui
+        DisplayName: restaurants-${self:provider.stage}-workshop-razvan
+        TopicName: restaurants-${self:provider.stage}-workshop-razvan
 
     mySubscription:
       Type: AWS::SNS::Subscription
       Properties:
-        Endpoint: theburningmonk@gmail.com
+        Endpoint: razvan.duluman@cegeka.com
         Protocol: email
         TopicArn: 
           Ref: restaurantNotificationTopic            
